@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tk.h,v 1.101 2007/09/19 17:54:30 dgp Exp $
+ * RCS: @(#) $Id: tk.h,v 1.102 2007/10/02 18:28:15 dgp Exp $
  */
 
 #ifndef _TK
@@ -56,7 +56,7 @@ extern "C" {
 #define TK_RELEASE_SERIAL	1
 
 #define TK_VERSION		"8.5"
-#define TK_PATCH_LEVEL		"8.5b1"
+#define TK_PATCH_LEVEL		"8.5b1.1"
 
 /*
  * A special definition used to allow this header file to be included from
