@@ -3,7 +3,7 @@ dnl	This file is an input file used by the GNU "autoconf" program to
 dnl	generate the file "configure", which is run during Tk installation
 dnl	to configure the system for the local environment.
 #
-# RCS: @(#) $Id: configure.in,v 1.139 2007/09/19 17:54:30 dgp Exp $
+# RCS: @(#) $Id: configure.in,v 1.140 2007/10/02 18:28:15 dgp Exp $
 
 AC_INIT([tk],[8.5])
 AC_PREREQ(2.59)
@@ -27,9 +27,9 @@ m4_ifdef([SC_USE_CONFIG_HEADERS], [
 TK_VERSION=8.5
 TK_MAJOR_VERSION=8
 TK_MINOR_VERSION=5
-TK_PATCH_LEVEL="b1"
+TK_PATCH_LEVEL="b1.1"
 VERSION=${TK_VERSION}
-LOCALES="cs de el en en_gb eo es es_ES fr it nl pl pt ru"
+LOCALES="cs de el en en_gb eo es fr hu it nl pl pt ru sv"
 
 #--------------------------------------------------------------------
 # Find and load the tclConfig.sh file
