@@ -1,3 +1,14 @@
+2007-10-02  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tk.h:		Bump version number to 8.5b1.1 to distinguish
+	* library/tk.tcl:	CVS development snapshots from the 8.5b1
+	* unix/configure.in:	release.  Updated LOCALES.
+	* unix/tk.spec:
+	* win/configure.in:
+
+	* unix/configure:	autoconf (2.59)
+	* win/configure:
+
 2007-09-30  Joe English  <jenglish@users.sourceforge.net>
 
 	* library/ttk/entry.tcl (WordBack, WordForward):
